Update to raspitools 0.3.0. Todo: Changes in layout